--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body{
     margin-top: 4rem;
     margin-bottom: 4rem;
 }
-#bear_jumping{
+img{
     display: flex;
     max-width: 100%;
     vertical-align: middle;
@@ -57,4 +57,22 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+
+#bear_kissing{
+    width: 150px;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+.container-2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+.hide{
+    display: none;
 }
